# ros2_data_collection

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  print.html  pyproject.toml  requirements-dev.txt  requirements.txt  searchindex.js  searchindex.json  setup.cfg
dc_bringup/: CMakeLists.txt  package.xml
dc_bringup/launch/: dc_bringup.launch.py
dc_bringup/params/: dc_params.yaml  test.yaml
dc_cli/: package.xml  setup.cfg  setup.py
dc_cli/dc_cli/: list_plugins.py
dc_common/: CMakeLists.txt  dc_common-extras.cmake  package.xml
dc_common/cmake/: dc_package.cmake
dc_core/: CMakeLists.txt  package.xml
dc_core/include/dc_core/: condition.hpp  destination.hpp  measurement.hpp
dc_demos/: CMakeLists.txt  measurement_plugin.xml  package.xml  setup.cfg  setup.py
dc_demos/dc_demos/: qrcodes_waypoint_follower.py  tb3_simulation_infinite.py
dc_demos/dc_demos/qrcodes_dashboard/: Streamlit_ROS_2.py  config.py
dc_demos/dc_demos/streamlit_dashboard/: config.py
dc_demos/launch/: group_memory_uptime_stdout.launch.py  navigation_stdout.launch.py  tb3_qrcodes.launch.py  tb3_qrcodes_minio_pgsql.launch.py  tb3_simulation_influxdb.launch.py  tb3_simulation_pgsql_minio.launch.py  tb3_simulation_stdout.launch.py  uptime_custom_stdout.launch.py  uptime_stdout.launch.py
dc_demos/params/: group_memory_uptime_stdout.yaml  qrcodes_minio_pgsql.yaml  qrcodes_nav.yaml  qrcodes_stdout.yaml  tb3_simulation_influxdb.yaml  tb3_simulation_pgsql_minio.yaml  tb3_simulation_stdout.yaml  uptime_custom_stdout.yaml  uptime_stdout.yaml
dc_demos/plugins/measurements/: uptime_custom.cpp
dc_description/: CMakeLists.txt  package.xml
dc_destinations/: CMakeLists.txt  destination_plugin.xml  package.xml
dc_destinations/include/dc_destinations/: destination.hpp  destination_server.hpp  flb_destination.hpp
dc_destinations/plugins/: flb_file.cpp  flb_file.hpp  flb_files_metrics.cpp  flb_http.cpp  flb_http.hpp  flb_influxdb.cpp  flb_kinesis_streams.cpp  flb_kinesis_streams.hpp  flb_minio.cpp  flb_null.cpp  flb_pgsql.cpp  flb_pgsql.hpp  flb_s3.cpp  flb_slack.cpp  flb_stdout.cpp  flb_stdout.hpp  flb_tcp.cpp  rcl.cpp
dc_destinations/src/: destination_server.cpp  main.cpp
dc_group/: package.xml  setup.cfg  setup.py
dc_group/dc_group/: flatten.py  group_server.py
dc_interfaces/: CMakeLists.txt  package.xml
dc_interfaces/msg/: Barcode.msg  StringStamped.msg
dc_interfaces/srv/: DetectBarcode.srv  DrawImage.srv  SaveImage.srv
dc_lifecycle_manager/: CMakeLists.txt  package.xml
dc_lifecycle_manager/include/dc_lifecycle_manager/: lifecycle_manager.hpp  lifecycle_manager_client.hpp
dc_lifecycle_manager/src/: lifecycle_manager.cpp  lifecycle_manager_client.cpp  main.cpp
dc_lifecycle_manager/test/: launch_bond_test.py  launch_lifecycle_test.py  test_bond.cpp  test_lifecycle_manager.cpp
dc_measurements/: CMakeLists.txt  condition_plugin.xml  measurement_plugin.xml  package.xml
dc_measurements/include/dc_measurements/: condition.hpp  measurement.hpp  measurement_server.hpp
dc_measurements/plugins/conditions/: bool_equal.cpp  double_equal.cpp  double_inferior.cpp  double_superior.cpp  exist.cpp  integer_equal.cpp  integer_inferior.cpp  integer_superior.cpp  list_bool_equal.cpp  list_double_equal.cpp  list_integer_equal.cpp  list_string_equal.cpp  moving.cpp  moving.hpp  same_as_previous.cpp  string_match.cpp
dc_measurements/plugins/measurements/: camera.cpp  camera.hpp  camera.json  cmd_vel.cpp  cmd_vel.hpp  cmd_vel.json  cpu.cpp  cpu.hpp  cpu.json  distance_traveled.cpp  distance_traveled.hpp  distance_traveled.json  dummy.cpp  ip_camera.cpp  map.cpp  map.hpp  map.json  memory.cpp  memory.hpp  memory.json  network.cpp  network.hpp  network.json  os.cpp  os.hpp  os.json  permissions.cpp  permissions.hpp  permissions.json  position.cpp  position.hpp  position.json  speed.cpp  speed.hpp  speed.json  stops.cpp  storage.cpp  storage.hpp  storage.json  string_stamped.cpp  (+5 more)
dc_measurements/src/: main.cpp  measurement_server.cpp
dc_measurements/test/: os_test.cpp  test_measurement_dummy.cpp  test_measurement_os.cpp  test_measurement_parameters.cpp  test_measurement_uptime.cpp  test_os.cpp
dc_services/: package.xml  setup.cfg  setup.py
dc_services/dc_services/: barcode_detection.py  draw_image.py  save_image.py
dc_services/launch/: dc_detection_barcodes.launch.py  dc_draw_image.launch.py  dc_save_image.launch.py
dc_simulation/: CMakeLists.txt  package.xml  setup.cfg
dc_simulation/dc_simulation/: __init__.py
dc_simulation/env-hooks/: dc_simulation.dsv.in
dc_simulation/launch/: warehouse.launch.py
dc_simulation/maps/: qrcodes.pgm  qrcodes.yaml
dc_simulation/models/: __init__.py
dc_simulation/models/bag/: bag_1000kg.stl  model.config  model.sdf
dc_simulation/models/cutout_wall/: model.config  model.sdf
dc_simulation/models/europallet/: europallet.dae  model.config  model.sdf
dc_simulation/models/europallet_10/: europallet_10.dae  model.config  model.sdf
dc_simulation/models/fireextinguisher/: model.config  model.sdf
dc_simulation/models/qrcode_0001/: model.config  model.sdf
dc_simulation/models/qrcode_0002/: model.config  model.sdf
dc_simulation/models/qrcode_0003/: model.config  model.sdf
dc_simulation/models/qrcode_0004/: model.config  model.sdf
dc_simulation/models/qrcode_0005/: model.config  model.sdf
dc_simulation/models/qrcode_0006/: model.config  model.sdf
dc_simulation/models/qrcode_0007/: model.config  model.sdf
dc_simulation/models/qrcode_0008/: model.config  model.sdf
dc_simulation/rviz/: qrcodes.rviz
dc_simulation/tools/: gen_qr_code_model.py
dc_simulation/urdf/: realsense_d455.urdf.xacro  turtlebot3_waffle_qrcodes.urdf  turtlebot3_waffle_qrcodes.xacro
dc_simulation/worlds/: qrcodes.world  waffle.model
dc_util/: CMakeLists.txt  package.xml
dc_util/include/dc_util/: json_utils.hpp  (+5 more)
dc_util/src/: base64.cpp
fluent_bit_plugins/: CMakeLists.txt  package.xml
fluent_bit_vendor/: CMakeLists.txt  fluentbit_vendor-extras.cmake  mpack.patch  package.xml
(+548 files in other folders)
