[metadata]
name = 'ros2_data_collection'
long_description = file: README.md
long_description_content_type = text/markdown

[flake8]
jobs = auto
verbose = 0
quiet = 0
format = default
count = True
show-source = True
statistics = True
tee = True
exclude = .git, __pycache__
filename = *.py
disable-noqa = False
max-line-length = 100
max-complexity = 10
ignore = BLK100, W503, T101, E203, E266, B008, D106, D100, C901, D104
enable-extensions = alfred, black, builtins, bugbear, comprehensions, darglint, debugger, executable, logging-format, pep3101, variables-names, copyright
doctests = True
inline-quotes = "
multiline-quotes = """
per-file-ignores = */launch/*launch.py:D103

[darglint]
strictness = short
ignore = D407
docstring_style=google
