<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dc_bringup</name>
    <version>1.1.0</version>
    <description>Bringup scripts and configurations for the DC stack</description>
    <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
    <license>MPL-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>launch_ros</build_depend>
    <build_depend>dc_common</build_depend>

    <exec_depend>launch_ros</exec_depend>
    <exec_depend>dc_measurements</exec_depend>
    <exec_depend>nav2_lifecycle_manager</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
