<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_cli</name>
  <version>0.1.0</version>
  <description>DC CLI tools</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>dc_destinations</exec_depend>
  <exec_depend>dc_measurements</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
