<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_core</name>
  <version>0.6.1</version>
  <description>A set of headers for plugins core to the DC stack</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_ros</depend>
  <build_depend>dc_common</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
