<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_demos</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dc_simulation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
