<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_demos</name>
  <version>0.1.0</version>
  <description>DC demo packages</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <depend>dc_measurements</depend>
  <depend>launch</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>
  <depend>pluginlib</depend>

  <exec_depend>aws_robomaker_small_warehouse_world</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dc_bringup</exec_depend>
  <exec_depend>dc_simulation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <dc_core plugin="${prefix}/measurement_plugin.xml" />
  </export>
</package>
