<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dc_description</name>
    <version>0.1.0</version>
    <description>Description files for DC</description>
    <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
    <license>MPL-2.0</license>

    <exec_depend>realsense2_description</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
