<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_group</name>
  <version>0.6.1</version>
  <description>DC Group node</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>dc_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclpy_message_converter</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
